// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aside should render correctly (snapshot) 1`] = `
<div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="info-circle"
      class="anticon anticon-info-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 2`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 3`] = `
<div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="info-circle"
      class="anticon anticon-info-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 4`] = `
<div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="info-circle"
      class="anticon anticon-info-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 5`] = `
<div>
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="exclamation-circle"
      class="anticon anticon-exclamation-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="exclamation-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 6`] = `
<div>
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="exclamation-circle"
      class="anticon anticon-exclamation-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="exclamation-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 7`] = `
<div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 8`] = `
<div>
  <div
    class="ant-alert ant-alert-error ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;

exports[`Aside should render different type correctly (snapshot) 9`] = `
<div>
  <div
    class="ant-alert ant-alert-info ant-alert-with-description admonition dark:bg-black dark:shadow-xl dark:shadow-primary css-dev-only-do-not-override-j0nf2s"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="info-circle"
      class="anticon anticon-info-circle ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Aside
      </div>
      <div
        class="ant-alert-description"
      >
        Aside
      </div>
    </div>
  </div>
</div>
`;
